--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                     </a>
                   </li>
                   <li>
-		  <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">Download App</button></h6>
+		  <a onclick="document.getElementById('subscribe').style.display='block'">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>                 
@@ -542,7 +542,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <div class="w3-container w3-white">
       <i onclick="document.getElementById('subscribe').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
       <h2 class="w3-wide">Click Here To Proceed</h2>
-      <p>Download Our Official App Now</p>
+      <p>Official App Now</p>
 	<a href="OfficialApplication.html"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">Download Now</button></a><br />
 	<h6>To Contact</h6>
 	 <a href="tel:917510255646" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >To Contact Directly</button></a>
