--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                     </a>
                   </li>
                   <li>
-		  <a onclick="document.getElementById('subscribe').style.display='block'">
+		  <a onclick="document.getElementById('contact').style.display='block'">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>                 
@@ -537,13 +537,13 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/main.js"></script>
    
   
-<div id="subscribe" class="w3-modal w3-animate-opacity">
+<div id="contact" class="w3-modal w3-animate-opacity">
   <div class="w3-modal-content" style="padding:32px">
     <div class="w3-container w3-white">
-      <i onclick="document.getElementById('subscribe').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
+      <i onclick="document.getElementById('contact').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
       <h2 class="w3-wide">Click Here To Proceed</h2>
       <p>Official App Now</p>
-	<a href="OfficialApplication.html"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">Download Now</button></a><br />
+	<a href="OfficialApplication.html"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('contact').style.display='none'">Download Now</button></a><br />
 	<h6>To Contact</h6>
 	 <a href="tel:917510255646" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >To Contact Directly</button></a>
     </div> 
