--- a/index.html
+++ b/index.html
@@ -537,15 +537,15 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/main.js"></script>
    
   
-<div id="subscribe" class="w3-modal w3-animate-opacity">
-  <div class="w3-modal-content" style="padding:32px">
-    <div class="w3-container w3-white">
-      <i onclick="document.getElementById('subscribe').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
-      <h2 class="w3-wide">Click Here To Proceed</h2>
-      <p>Official App Now</p>
-	 <a href="tel:917510255646" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >To Contact Directly</button></a>
-	    <h6>To Contact</h6>
-	 <a href="tel:917510255646" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >To Contact Directly</button></a>
+<div id="subscribe">
+  <div style="padding:32px">
+    <div style="allign:centre;">
+      <i onclick="document.getElementById('subscribe').style.display='none'" ></i>
+      <h2>Click Here To Proceed</h2>
+      <p>Contact Office Now</p>
+	 <a href="tel:919037140240" ></a>
+	    <h6>Try With</h6>
+	 <a href="tel:919037240140" >Phone-2</a>
     </div> 
   </div>
 </div>
