--- a/index.html
+++ b/index.html
@@ -20,6 +20,58 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+.popup{	  
+    background-color: #ffffff;
+    width: 420px;
+    padding: 30px 40px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 8px;
+    display: none;
+    font-family: “Poppins”,sans-serif;
+    text-align: center;
+ }
+.popup button{	 
+    display: block;
+    margin:  0 0 20px auto;
+    background-color: transparent;
+    font-size: 30px;
+    color: #ffffff;
+    background: #03549a;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.popup h2{	  
+   margin-top: -20px;
+}
+.popup p{
+    font-size: 14px;
+    text-align: justify;
+    margin: 20px 0;
+    line-height: 25px;
+}
+a{	  
+    display: block;
+    width: 150px;
+    position: relative;
+    margin: 10px auto;
+    text-align: center;
+    background-color: #0f72e5;
+    border-radius: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 8px 0;
+}
+  </style>
+	  
+	  
   </head>
   <body>
     <!--[if lte IE 9]>
@@ -535,20 +587,21 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
-   
+    <script>
+    window.addEventListener(“load”, function(){
+    setTimeout(
+        function open(event){
+            document.querySelector(“.popup”).style.display = “block”;
+    },
+    1000 
+    )
+    });
+    document.querySelector(“#close”).addEventListener(“click”, function(){
+    document.querySelector(“.popup”).style.display = “none”;
+    });    
+    </script>
   
-<div id="subscribe">
-  <div style="padding:32px">
-    <div style="allign:centre;">
-      <i onclick="document.getElementById('subscribe').style.display='none'" ></i>
-      <h2>Click Here To Proceed</h2>
-      <p>Contact Office Now</p>
-	 <a href="tel:919037140240" ></a>
-	    <h6>Try With</h6>
-	 <a href="tel:919037240140" >Phone-2</a>
-    </div> 
-  </div>
-</div>
+
     
     
   </body>
